# widget

./: .gitignore  README.md  main.py  pyproject.toml
src/: mask.py  processing.py  widget.py
